* Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 5.0.2-0
- Updated $app_pki_external_source to accept any string. This matches the
  functionality of pki::copy.

* Thu Jun 14 2018 Nick Miller <nick.miller@onyxpoint.com> - 5.0.2-0
- Update systemd fixtures and CI assets

* Mon Feb 12 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.1-0
- Update upperbound on puppetlabs/java version to < 3.0.0

* Thu Nov 09 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.1-0
- Adjust string match in acceptance test

* Tue May 09 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.0-0
- Updated to LogStash 5.X and Elasticsearch 5.X
- Fixed type bug in simp_logstash::output::elasticsearch::action.
- Fixed enum typo in enum for simp_logstash::output::elasticsearch::script_type
- Fixed puppet strings problems.
- Confine puppet version in metadata.json

* Fri Dec 02 2016 Nick Markowski <nmarkowski@keywcorp.com> - 3.0.1-0
- Removed pupmod-simp-sysctl in favor of augeas-sysctl

* Tue Nov 22 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 3.0.0-0
- Update major version release for SIMP 6
- Removed stunnel and replaced it with TCP TLS input
- Added TLS enabled JSON input
- Updated tests

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.0.1-0
- Minor updates

* Wed Nov 16 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 2.0.1-0
- Updated iptables dependency version

* Tue Oct 25 2016 Ralph Wright <rwright@onyxpoint.com> - 2.0.1-0
- Updated and enabled auditd logstash filters
- Updated spec and acceptance tests

* Fri Sep 23 2016 Ralph Wright <rwright@onyxpoint.com> - 2.0.1-0
- Updated filters to make searching and visualization easier.
- Updated grok syntax.

* Mon Jul 04 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.0.0-0
- First cut after being split off from the original simp-logstash module.
- Provides a much cleaner abstraction between this and the upstream Logstash
  material from Elastic.