@@ -4,6 +4,9 @@ describe 'simp_logstash::output::elasticsearch' do
   on_supported_os.each do |os, facts|
     context "on #{os}" do
       let(:facts){ facts }
+      if "#{facts[:operatingsystem]}-#{facts[:operatingsystemmajrelease]}" == 'OracleLinux-6'
+        let(:hieradata) { 'oel6' }
+      end
 
       context 'with default parameters' do
         let(:params) { {} }
