@@ -1,0 +1,2 @@
+---
+logstash::service_provider: 'upstart'
